@@ -549,10 +549,12 @@ to print the corresponding values, or T for all of them.")
     (fresh-line stream)
     (terpri stream) ; blank line
     (if (memq obj *describe-done*)
-      (format stream (TEXT "~A [see above]") objstring)
+      (with-stream-s-expression (stream)
+        (format stream (TEXT "~A [see above]") objstring))
       (let ((doc (and (symbolp obj) (get obj 'sys::doc))))
         (push obj *describe-done*)
-        (format stream (TEXT "~A is ") objstring)
+        (with-stream-s-expression (stream)
+          (format stream (TEXT "~A is ") objstring))
         (describe-object obj stream)
         (fresh-line stream)
         (when doc
